change style .css

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 body {
-    background-color: dimgray;
-    color: whitesmoke;
+    background-color: whitesmoke;
+    color: darkslategrey;
+    
 }
+
